--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -353,6 +353,7 @@ homeassistant/components/rainbird/* @konikvranik
 homeassistant/components/raincloud/* @vanstinator
 homeassistant/components/rainforest_eagle/* @gtdiehl @jcalbert
 homeassistant/components/rainmachine/* @bachya
+homeassistant/components/ralassistant/* @trinhanh268
 homeassistant/components/random/* @fabaff
 homeassistant/components/rejseplanen/* @DarkFox
 homeassistant/components/repetier/* @MTrab
